[package]
name = "nmg-league-bot"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.19.0", features = ["macros", "rt-multi-thread", "sync", "fs", "io-util", "signal"]}
tokio-stream = "0.1.9"
sqlx = {version = "0.5.13", features = [ "runtime-tokio-rustls" , "sqlite"]}
dotenv = "0.15.0"
uuid = {version = "1.1.1", features = ["v4"] }
rand = "0.8"
regex = "1"
lazy_static = "1.4.0"
oauth2 = "4.2.0"
aliri_braid = "0.1.10"
serde = "1"

twilight-http = "0.11.0"
twilight-model = "0.11.0"
twilight-validate = "0.11.0"
twilight-mention = "0.11.0"
twilight-cache-inmemory = "0.11.0"
twilight-gateway = "0.11.0"
twilight-util = { version = "0.11.0", features = ["builder", "link"]}

dashmap = "5.3.4"

rocket = { version = "0.5.0-rc.2", features = ["json"] }
rocket_dyn_templates = { version = "0.1.0-rc.2", features = ["tera"] }

[dependencies.serenity]
version = "0.11.2"
default-features=false
features=["client", "gateway", "rustls_backend", "model", "cache", "collector"]

[build-dependencies]
sqlx = {version = "0.5.13", features = [ "runtime-tokio-rustls" , "sqlite"]}
tokio = { version = "1.19.0", features = ["rt-multi-thread", "macros"]}
dotenv = "0.15.0"