[package]
name = "nmg-league-bot"
version = "0.1.0"
edition = "2021"
default-run = "bot"

[lib]
path = "src/lib.rs"

[[bin]]
name = "bot"
path = "src/main.rs"


[features]
no_auth_website = []

[dependencies]
tokio = { version = "1.19.0", features = ["macros", "rt-multi-thread", "sync", "fs", "io-util", "signal"]}
tokio-stream = "0.1.9"

diesel = {version = "2.0.0", features = ["sqlite", "numeric", "returning_clauses_for_sqlite_3_35"]}
diesel_migrations = "2.0.0"
libsqlite3-sys = { version = "=0.24.2", features = ["bundled"]}
dotenv = "0.15.0"
uuid = {version = "1.1.1", features = ["v4"] }
rand = "0.8"
regex = "1"
lazy_static = "1.4.0"
oauth2 = "4.2.0"
aliri_braid = "0.2.4"
serde = {version = "1", features=["derive"]}
serde_json = "1"
chrono = "0.4"
chrono-tz = "0.8.1"
bb8 = "0.8.0"
async-trait = "0.1"
itertools = "0.10"
thiserror = "1.0"
iso8601-duration = "0.2.0"
enum-iterator = "1.2.0"

reqwest = "0.11.13"
twitch_api = { version = "0.7.0-rc.4", features = ["client", "reqwest", "helix"]}

twilight-model = "0.15.1"
twilight-validate = "0.15.1"
twilight-mention = "0.15.1"
twilight-cache-inmemory = "0.15.1"
twilight-gateway = { version = "0.15.1", features=["rustls-webpki-roots"] }
twilight-util = { version = "0.15.1", features = ["builder", "link"]}
twilight-standby = "0.15.1"

rustls = "0.21.0"
rustls-native-certs = "0.6.2"

dashmap = "5.3.4"

rocket = { version = "0.5.0-rc.2", features = ["json"] }
rocket_dyn_templates = { version = "0.1.0-rc.2", features = ["tera"] }
diesel_enum_derive = {git = "https://github.com/FoxLisk/diesel_enum_derive"}

log4rs = { version = "1.2.0", features = ["gzip"] }
log = "0.4.17"
anyhow = "1"

[dependencies.swiss-pairings]
#path = "../swiss-pairings"
git = "https://github.com/FoxLisk/swiss-pairings.git"

[dependencies.racetime-api]
#path = "../racetime-api"
git = "https://github.com/FoxLisk/racetime-api.git"

[dependencies.twilight-http]
version = "0.15.1"
#git = "https://github.com/twilight-rs/twilight.git"
#branch = "7596ff/fix/http/scheduled-event-privacy-level"
##rev = "f1fe47d999e5e4aada531c60abc8fb1dcdd419c2"
#path = "../twilight/twilight-http"

[build-dependencies]
tokio = { version = "1.19.0", features = ["rt-multi-thread", "macros"]}
dotenv = "0.15.0"
#
#
#[patch.crates-io]
#twilight-model = { git = "https://github.com/twilight-rs/twilight.git", branch = "7596ff/fix/http/scheduled-event-privacy-level" }
#twilight-validate = { git = "https://github.com/twilight-rs/twilight.git", branch = "7596ff/fix/http/scheduled-event-privacy-level" }
#twilight-mention = { git = "https://github.com/twilight-rs/twilight.git", branch = "7596ff/fix/http/scheduled-event-privacy-level" }
#twilight-cache-inmemory = { git = "https://github.com/twilight-rs/twilight.git", branch = "7596ff/fix/http/scheduled-event-privacy-level" }
#twilight-gateway = { git = "https://github.com/twilight-rs/twilight.git", branch = "7596ff/fix/http/scheduled-event-privacy-level" }
#twilight-util = { git = "https://github.com/twilight-rs/twilight.git", branch = "7596ff/fix/http/scheduled-event-privacy-level" }
#twilight-standby = { git = "https://github.com/twilight-rs/twilight.git", branch = "7596ff/fix/http/scheduled-event-privacy-level" }